--- a/login/css/customstyle.css
+++ b/login/css/customstyle.css
@@ -1,1 +1,10 @@
 /*Custom style sheet to override Bootstrap styles*/
+body{
+    padding: 40px 0px;
+}
+
+.loginForm{
+    max-width: 400px;
+    padding: 10px;
+    margin: 0 auto;
+}
