Update custom CSS for form and change btn type
Add in CSS for log-in form, inputs and buttons to adjust font. Add background color to form and change btn to btn-primary

--- a/login/css/customstyle.css
+++ b/login/css/customstyle.css
@@ -1,10 +1,22 @@
 /*Custom style sheet to override Bootstrap styles*/
 body{
     padding: 40px 0px;
+    font-family: 'Quicksand', sans-serif;
 }
+
+button,
+input,
+optgroup,
+select,
+textarea {
+     font-family: 'Quicksand', sans-serif;
+}
+
 
 .loginForm{
     max-width: 400px;
     padding: 10px;
     margin: 0 auto;
+    background-color: #99C3E4;
+    border-radius: 0.3rem;
 }
